Drupal 8.1.0, 2016-04-20
------------------------
- Removed Composer-managed vendor from the git repository:
    * Drupal.org packager adds dependencies to zip and tar package. This can be
      used without any further steps.
    * When not using zip / tar files, e.g. when using a git clone, run composer
      install to get dependencies.
    * See https://www.drupal.org/documentation/install/download#git
      for instructions.
- Added vendor libraries:
    * Added Symfony Polyfill Iconv 1.1.0.
    * Added paragonie/random_compat 1.4.1.
- Updated vendor libraries:
    * Updated to the last 2.x minor version of Symfony: 2.8 (2.8.4).
    * Updated to CKEditor 4.5.8.
    * Updated to Modernizr 3.3.1.
- Added modules:
    * Added the Migrate Drupal UI module (experimental) to provide a UI for
      migrating content and configuration from Drupal 6 and Drupal 7.
    * Added the BigPipe module (experimental) to improve perceived performance.
- Improved authoring features:
    * Enabled browsers' (native) spell checker in CKEditor.
    * Added language toolbar button in CKEditor for identifying the language of
      text parts.
- Improved site administration experience:
    * Improved admin/help page to be more flexible and list tours on it.
- Improved site building features:
    * Added a "Rendered entity" field handler in Views.
- Improved distribution building features:
    * Added support for distributions to specify an installation language.
- Improved developer APIs:
    * Added local ID and revision fields to HAL web service output.
    * Added support for image toolkits to be defined with plugin derivatives,
      reducing the code needed to extend them.
    * Simplified Migrate API by replacing migration configuration entities with
      migration plugins.
    * Various improvements for defining entity types:
      * Added support for entity types to specify translatable plural labels.