@@ -47,8 +47,11 @@ class IntegrationTest extends ViewTestBase {
 
     ViewTestData::createTestViews(get_class($this), array('statistics_test_views'));
 
-    // Create a new user for viewing nodes.
-    $this->webUser = $this->drupalCreateUser(array('access content'));
+    // Create a new user for viewing nodes and statistics.
+    $this->webUser = $this->drupalCreateUser(array('access content', 'view post access counter'));
+
+    // Create a new user for viewing nodes only.
+    $this->deniedUser = $this->drupalCreateUser(array('access content'));
 
     $this->drupalCreateContentType(array('type' => 'page'));
     $this->node = $this->drupalCreateNode(array('type' => 'page'));
@@ -59,13 +62,14 @@ class IntegrationTest extends ViewTestBase {
       ->set('count_content_views', 1)
       ->save();
 
-    $this->drupalLogin($this->webUser);
   }
 
   /**
    * Tests the integration of the {node_counter} table in views.
    */
   public function testNodeCounterIntegration() {
+    $this->drupalLogin($this->webUser);
+
     $this->drupalGet('node/' . $this->node->id());
     // Manually calling statistics.php, simulating ajax behavior.
     // @see \Drupal\statistics\Tests\StatisticsLoggingTest::testLogging().
@@ -84,6 +88,17 @@ class IntegrationTest extends ViewTestBase {
       $xpath = "//div[contains(@class, views-field-$field)]/span[@class = 'field-content']";
       $this->assertFieldByXpath($xpath, $value, "The $field output matches the expected.");
     }
+
+    $this->drupalLogout();
+    $this->drupalLogin($this->deniedUser);
+    $this->drupalGet('test_statistics_integration');
+    $this->assertResponse(200);
+
+    foreach ($expected as $field => $value) {
+      $xpath = "//div[contains(@class, views-field-$field)]/span[@class = 'field-content']";
+      $this->assertNoFieldByXpath($xpath, $value, "The $field output is not displayed.");
+    }
+
   }
 
 }
